Fix text overflow on mobile screens

--- a/src/components/ArticleContent/ArticleContent.module.css
+++ b/src/components/ArticleContent/ArticleContent.module.css
@@ -20,6 +20,10 @@
     width: 100%;
     height: rem(512px);
     position: relative;
+
+    @media (max-width: $mantine-breakpoint-md) {
+        height: rem(640px);
+    }
 }
 
 .briefImage {
